FrostWire 1.6.0 - AUGUST/03/2015
 - Streaming Previews on search results before download. (FrostWire Plus only)
 - Play .torrent media files while downloading.
 - Upgrade bittorrent engine to jlibtorrent 1.0
 - Updated SoundCloud search & download api.
 - Improved search suggestions.
 - Improved transition between My Music and Home screens.
 - Multiple crash fixes in music player.

FrostWire 1.5.8 - JUNE/16/2015
 - Search performance improvements.
 - Issues where subsequent searches would stop working fixed.
 - TorLock search fixed.
 - Added SSL (https) support for torrent web seeds.
 - Icons/graphics update.
 - New 'Rate us' reminder notification.
 - WiFi sharing functionality removed. Less than 0.2% of the user
   base making use of this, despite multiple rewrites we never
   managed to get it to work 100% of the time.
 - frostwire-jlibtorrent library updates.

FrostWire 1.5.7 - MAY/15/2015
 - KAT search fixed.
 - Monova search fixed.
 - EZTV search fixed.
 - Bitsnoop downloads fixed.
 - BTJunkie downloads fixed.

FrostWire 1.5.6 - MAY/08/2015
 - Further YouTube search fixes for non-english users.

FrostWire 1.5.5 - MAY/07/2015
 - YouTube search fixed. (FrostWire Plus only)
 - Domain alias manager removed.

FrostWire 1.5.4 - MAY/04/2015
 - Crash fixes.
 - Major icons make over. Crisp look on higher density screens.

FrostWire 1.5.3 - APRIL/23/2015
 - Crash fixes.
 - Reduced installer size to 7.6 MB.
 - Lollipop compatibility fixes.
 - Bitsnoop search faster for individual files.
 - Binary Optimizations.
 - libtorrent updates.
 - Spanish, Portuguese, Polish translation updates.

FrostWire 1.5.2 - APRIL/17/2015
 - Significant improvements in search results for individual files.
 - Significant reduction of DHT queries, freeing up networking resources.
 - Faster torrent download start.
 - Fixes download error on some Archive.org search results.
 - When no search results are found, search suggestions are calculated from search keywords.
 - Fixes Yify search.