@@ -1,3 +1,8 @@
+FrostWire 1.6.1 - AUGUST/07/2015
+ - Fixes TorLock search.
+ - Crash fixes on libtorrent/jlibtorrent.
+ - Search engines maintenance fix high cpu usage.
+
 FrostWire 1.6.0 - AUGUST/03/2015
  - Streaming Previews on search results before download. (FrostWire Plus only)
  - Play .torrent media files while downloading.
